move common widget style in css-variables.css

--- a/libs/search-widget/public/styles/css-variables.css
+++ b/libs/search-widget/public/styles/css-variables.css
@@ -112,4 +112,13 @@
   --search-bar-border-radius: var(--custom-search-bar-border-radius, 0);
   --search-bar-padding: var(--custom-search-bar-padding, var(--default-search-field-padding));
   --search-bar-max-width: var(--custom-search-bar-max-width, var(--rhythm-56));
+
+  color: var(--color-dark-stronger);
+  font-family: var(--font-family-body);
+  font-size: var(--font-size-base);
+  font-weight: var(--font-weight-body);
+  line-height: var(--line-height-body);
+  text-align: left;
+
+  box-sizing: border-box;
 }
