--- a/libs/chrome-ext/src/lib/style.css
+++ b/libs/chrome-ext/src/lib/style.css
@@ -11,9 +11,11 @@ legend {
 }
 fieldset {
   border: 1px solid #f0f0f0;
+  margin-bottom: 1em;
 }
 fieldset p {
-  color: #999;
+  color: #c4c4c4;
+  margin-bottom: 4px;
 }
 
 .field {
@@ -55,7 +57,7 @@ button.secondary {
 .help {
   margin-top: 0.25rem;
   font-size: 0.625rem;
-  color: #999;
+  color: #c4c4c4;
 }
 
 .message {
@@ -68,7 +70,7 @@ header {
   background-color: #0d0d0d;
 }
 header img {
-  height: 50px;
+  height: 48px;
   padding: 1em;
 }
 
