--- a/libs/chrome-ext/src/lib/style.css
+++ b/libs/chrome-ext/src/lib/style.css
@@ -6,6 +6,18 @@ p {
   margin: 0 0 2rem 0;
 }
 
+legend {
+  font-weight: bold;
+}
+fieldset {
+  border: 1px solid #f0f0f0;
+  margin-bottom: 1em;
+}
+fieldset p {
+  color: #c4c4c4;
+  margin-bottom: 4px;
+}
+
 .field {
   margin-bottom: 1rem;
 }
@@ -16,7 +28,7 @@ label {
   margin-bottom: 0.25rem;
 }
 
-input {
+input[type='text'] {
   width: 20rem;
   height: 1.5rem;
   padding: 0 0.25rem;
@@ -37,15 +49,36 @@ button {
   border-radius: 4px;
   cursor: pointer;
 }
-
+button.secondary {
+  border: 1px solid #ff0066;
+  color: #ff0066;
+  background-color: #fff;
+}
 .help {
   margin-top: 0.25rem;
   font-size: 0.625rem;
-  color: #999;
+  color: #c4c4c4;
 }
 
 .message {
   padding-left: 1rem;
   vertical-align: middle;
   font-weight: bold;
+}
+
+header {
+  background-color: #0d0d0d;
+}
+header img {
+  height: 48px;
+  padding: 1em;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+main {
+  margin: 1em;
 }
