[sc-2194] video tile (#215)
* Fix spacer, so it doesn't depend on the font-size of the current element

Add shadow to Svelte button

* Video tile for search results

* Icon component using sistema glyph sprite

* Filtering transcripts

* Add ability to show all results for a resource

* Fix time in search results

* No highlights in new SearchBar widget

* Fix formatTime to support hours

* Fix find in transcript to be case insensitive

* Fix mark style in search results and transcripts

* Fix playing video marker

* Fix time player look and feel

* Fix responsiveness

--- a/libs/search-widget/src/components/button/button.css
+++ b/libs/search-widget/src/components/button/button.css
@@ -9,7 +9,7 @@
   line-height: var(--line-height-body);
   margin: 0;
   outline: 0;
-  padding: 0.4em 0.5em;
+  padding: var(--rhythm-1) var(--rhythm-2);
   transition: background-color 0.16s ease-in-out, box-shadow 0.16s ease-in;
   white-space: nowrap;
 }
@@ -17,12 +17,12 @@
   box-shadow: var(--focus-shadow);
   outline: 0;
 }
-svg:focus {
+.button svg:focus {
   outline: 0;
 }
 .button.icon {
   border-radius: 50%;
-  padding: 12px;
+  padding: var(--rhythm-1_5);
 }
 
 .button:not(:disabled) {
@@ -35,37 +35,34 @@ svg:focus {
   align-items: center;
 }
 
-svg {
-  display: block;
-  fill: currentColor;
-}
-
 .button.small {
   font-size: calc(var(--font-size-base) * 0.75);
   line-height: calc(var(--line-height-body) * 0.75);
-  padding: 4px;
+  padding: var(--rhythm-0_5);
 }
 
-.solid {
+.button.solid {
   color: var(--color-light-stronger);
   background: var(--color-dark-stronger);
   border: var(--color-dark-stronger);
 }
-.solid:not(:disabled):hover {
-  background: var(--color-neutral-light);
+.button.solid:not(:disabled):hover {
+  background: var(--color-dark-stronger);
+  box-shadow: var(--shadow-small);
 }
-.solid:not(:disabled):active {
+
+.button.solid:not(:disabled):active {
   background: var(--color-neutral-regular);
 }
 
-.basic {
+.button.basic {
   color: var(--color-dark-stronger);
   background: transparent;
   border: var(--color-dark-stronger);
 }
-.basic:not(:disabled):hover {
+.button.basic:not(:disabled):hover {
   background: var(--color-neutral-lighter);
 }
-.basic:not(:disabled):active {
+.button.basic:not(:disabled):active {
   background: var(--color-neutral-light);
 }
