--- a/libs/sistema/src/lib/progress/spinner/spinner.component.scss
+++ b/libs/sistema/src/lib/progress/spinner/spinner.component.scss
@@ -69,8 +69,7 @@ $inner-size-large: rhythm(12);
           left: 0;
           border-right-color: transparent;
           animation: left-wobble 1.3125s cubic-bezier(0.35, 0, 0.25, 1) infinite;
-          -webkit-animation: left-wobble 1.3125s cubic-bezier(0.35, 0, 0.25, 1)
-          infinite;
+          -webkit-animation: left-wobble 1.3125s cubic-bezier(0.35, 0, 0.25, 1) infinite;
         }
       }
 
