move all styes to SCSS files

--- a/libs/search-widget/src/Widget.scss
+++ b/libs/search-widget/src/Widget.scss
@@ -1,4 +1,6 @@
-@import './widgets/search-input/SearchInput.scss';
+@import './components';
+@import './viewer';
+@import './widgets';
 
 :global(mark) {
   background-color: inherit;
