--- a/libs/search-widget/src/_video-widget/VideoTile.scss
+++ b/libs/search-widget/src/_video-widget/VideoTile.scss
@@ -59,7 +59,7 @@
     transition: height var(--transition-fast);
   }
 
-  .result-details .paragraphs-container:not(.expanded) {
+  .result-details .paragraphs-container.can-expand:not(.expanded) {
     height: calc(var(--paragraph-height) * 4 + var(--paragraph-gap) * 3);
     overflow: hidden;
   }
