Load CSS variables through scss

--- a/libs/search-widget/src/common-style.scss
+++ b/libs/search-widget/src/common-style.scss
@@ -1,4 +1,4 @@
-.variables{
+.nuclia-widget {
   /* PALETTE */
   --color-dark-stronger: var(--custom-color-dark-stronger, hsl(0, 0%, 5%));
   --color-dark-stronger-rgb: 13, 13, 13;
