--- a/libs/search-widget/src/_video-widget/TimePlayer.scss
+++ b/libs/search-widget/src/_video-widget/TimePlayer.scss
@@ -18,9 +18,6 @@
     display: none;
   }
 
-  &:hover {
-    background: var(--color-neutral-light);
-  }
   &:active {
     background: var(--color-neutral-regular);
   }
@@ -29,18 +26,20 @@
     outline: 0;
   }
 
-  &.hover {
+  &.hovering {
     background: var(--color-primary-lightest);
   }
   &.selected {
     background: var(--color-primary-lightest);
     color: var(--color-primary-regular);
   }
-  &.selected:hover {
-    background: var(--color-primary-lighter);
-  }
   &.selected:active {
     background: var(--color-primary-light);
     color: var(--color-light-stronger);
+  }
+}
+@media (hover: hover) {
+  .sw-time-player:not(.hovering):hover {
+    background: var(--color-neutral-light);
   }
 }
